fixed invisible text in game search after editing (#2210)

--- a/client/css/layout.css
+++ b/client/css/layout.css
@@ -33,11 +33,11 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
-body.darkMode input {
+body.edit.darkMode input {
   --overlayFontColor: #ffffff;
 }
 
-body.darkMode input::placeholder {
+body.edit.darkMode input::placeholder {
   color: #ffffff;
 }
 
